changed some id names

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<!-- Shirt & Button Container -->
 		<div class="shirtBox">
 			<!-- Unnecessary but Necessary Div -->
-			<div class="dumb">
+			<div class="flipBox">
 				<!-- Flip Button -->
-				<div class="flip">
+				<div class="flipButton">
 					<i class="material-icons">reply</i>
 				</div>
 				<!-- Shirt -->
@@ -75,9 +75,9 @@
 		<!-- Shirt & Button Container -->
 		<div class="shirtBox">
 			<!-- Unnecessary Div -->
-			<div class="dumb">
+			<div class="flipBox">
 				<!-- Flip Button -->
-				<div class="flip">
+				<div class="flipButton">
 					<i class="material-icons">reply</i>
 				</div>
 				<!-- Shirt -->
@@ -138,9 +138,9 @@
 		<!-- Shirt & Button Container -->
 		<div class="shirtBox">
 			<!-- Unnecessary Div -->
-			<div class="dumb">
+			<div class="flipBox">
 				<!-- Flip Button -->
-				<div class="flip">
+				<div class="flipButton">
 					<i class="material-icons">reply</i>
 				</div>
 					<!-- Shirt -->
